--- a/adminside/templates/main/list.html
+++ b/adminside/templates/main/list.html
@@ -29,7 +29,7 @@
                             <td>{{f.email}}</td>
                             <td>{{f.date_of_birth}}</td>
                             <td>{{f.username}}</td>
-                            <td class="nav flex-column">
+                            <td class="flex-column">
                                 <a href="{% url 'cust-detail' f.id%}"class="px-4"> View</a>
 
                                 <a href="{%url 'cust-remove' f.id %}" class="px-4 mt-2">Delete</a>
