--- a/publicuser/templates/user/registration.html
+++ b/publicuser/templates/user/registration.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
 
-    <link rel="stylesheet" href="style.css">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -26,6 +25,7 @@
         
         <form action="" method="post" class="bg-white m-5 p-5 w-50 rounded-3">
             {%csrf_token%}
+            {{form.errors}}
             <p class="fw-bold fs-4 ">Customer Registration</p>
             {%if messages%}
     {%for m in messages%}
